Fix Overflow

--- a/src/styles/views/Invite.scss
+++ b/src/styles/views/Invite.scss
@@ -11,7 +11,7 @@
     background-blend-mode: normal, normal;
     background: radial-gradient(ellipse closest-side at 50% 50%, #b219fe 5%, #48007e);
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    overflow: hidden;
+    overflow: auto;
     position: absolute;
     top: 0;
     bottom: 0;
